2009-06-25  Manuel Arostegui <marostegui@artica.es>

	* pandora_console.spec: RPM spec file for 3.0 version.
	Packages built succesfully for: Centos5, Fedora 11, 
	RHEL5, SLE9, SLE10, SLE11, OpenSuse 10.3, OpenSuse 11, 
	OpenSuse 11, OpenSuse Factory. We still need to check
	the exactly names in Suse distros for dependencies.

2009-06-25  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: optimice the search agent in DB, quit option
	to search for description.

2009-06-25  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/massive_delete_agents.php,
	godmode/agentes/massive_delete_agents.php: changes for clarity
	and maintenance code.

2009-06-25  Jorge Gonzalez  <jorgegonz@aartica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	* translation.

	* include/languages/index.pot: Updated po template.

2009-06-25  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/functions_db.php, operation/snmpconsole/snmp_view.php,
	* operation/agentes/status_monitor.php,
	* operation/agentes/estado_grupo.php,
	* operation/agentes/estado_ultimopaquete.php,
	* operation/agentes/alerts_status.php,
	* operation/agentes/estado_generalagente.php,
	* operation/agentes/estado_agente.php,
	* operation/agentes/exportdata.php,
	* operation/agentes/estado_monitores.php,
	* operation/agentes/tactical.php, operation/agentes/networkmap.php,
	* operation/reporting/reporting_viewer.php, reporting/fgraph.php,
	* general/pandora_help.php, general/logoff.php,
	* general/logon_failed.php, godmode/setup/setup.php,
	* godmode/setup/links.php, godmode/snmpconsole/snmp_alert.php,
	* godmode/profiles/profile_list.php, godmode/db/db_main.php,
	* godmode/db/db_audit.php, godmode/db/db_refine.php,
	* godmode/db/db_info.php, godmode/db/db_event.php,
	* godmode/db/db_purge.php,
	* godmode/agentes/massive_delete_agents.php,
	* godmode/agentes/massive_config.php,
	* godmode/agentes/massive_delete_alerts.php,
	* godmode/agentes/massive_edit_modules.php,